<resources>
    <string name="app_name">IMC</string>
    <string name="texto_etiqueta_peso">Proporcione el peso en kilogramos</string>
    <string name="texto_etiqueta_estatura">Proporcione la altura en metros</string>
    <string name="texto_boton_calcular">Calcular</string>
    <string name="texto_boton_limpiar">Limpiar</string>
    <string name="texto_etiqueta_imc">El indice de masa corporal (IMC) es</string>
    <string name="texto_etiqueta_situacion">Estado nutricional de acuerdo a la OMS:</string>
    <string name="texto_situacion_peso_bajo">Peso bajo</string>
    <string name="texto_situacion_peso_normal">Peso normal</string>
    <string name="texto_situacion_sobrepeso">Sobrepeso</string>
    <string name="texto_situacion_obesidad">Obesidad</string>
    <string name="texto_situacion_obesidad_extrema">Obesidad Extrema</string>
</resources>

