<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_etiqueta_peso"/>
    <EditText
        android:id="@+id/campo_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_etiqueta_estatura"/>
    <EditText
        android:id="@+id/campo_estatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/boton_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_calcular"/>
        <Button
            android:id="@+id/boton_limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_limpiar"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_etiqueta_imc"/>
    <TextView
        android:id="@+id/etiqueta_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_etiqueta_situacion"/>
    <TextView
        android:id="@+id/etiqueta_situacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_situacion_peso_normal"/>
</LinearLayout>